--- a/src/main/webapp/test.xhtml
+++ b/src/main/webapp/test.xhtml
@@ -4,7 +4,7 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
                 xmlns:c="http://java.sun.com/jsp/jstl/core"
-                template="/WEB-INF/template.xhtml">
+                template="/template/template.xhtml">
 
     <ui:define name="subheader">
         Page Header
