--- a/src/main/webapp/project/index.xhtml
+++ b/src/main/webapp/project/index.xhtml
@@ -3,14 +3,13 @@
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                template="/template/template.xhtml">
+                template="/WEB-INF/template/template.xhtml">
 
     <ui:define name="subheader">
         Projects
     </ui:define>
 
     <ui:define name="content">
-
         <div class="Container100">
             <div class="ContainerIndent">
                 <div class="Card TexAlCenter">
